styles in text-view, login and signup components. Fixed bug when "log out" button is visible in the login or signup page. PageNotFoundComponent is active when a URL is incorrect.

--- a/src/app/components/table-view/table-view.component.css
+++ b/src/app/components/table-view/table-view.component.css
@@ -1,3 +1,15 @@
 .table-row_marked{
   background-color: deepskyblue;
 }
+
+.table-row__source-cell{
+  width: 10%;
+}
+
+.table-row__date-cell{
+  width: 14%;
+}
+
+.table-row__copy-link-cell{
+  width: 10%;
+}
