--- a/src/app/components/text-view/text-view.component.css
+++ b/src/app/components/text-view/text-view.component.css
@@ -1,3 +1,3 @@
-.log-list__item_marked{
+.list-group-item_marked{
   background-color: deepskyblue;
 }
